--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "axios": "^1.7.2",
     "framer-motion": "^11.2.13",
+    "lucide-react": "^0.407.0",
     "next": "14.2.4",
     "react": "^18",
+    "react-calendly": "^4.3.1",
     "react-dom": "^18"
   }
 }
