--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "axios": "^1.7.2",
     "framer-motion": "^11.2.13",
     "lucide-react": "^0.407.0",
-    "next": "14.2.4",
-    "react": "^18",
+    "next": "^14.2.4",
+    "react": "^18.3.1",
     "react-calendly": "^4.3.1",
-    "react-dom": "^18",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1"
   }
 }
