--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.5",
     "axios": "^1.7.2",
     "framer-motion": "^11.2.13",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.407.0",
     "next": "^14.2.4",
     "react": "^18.3.1",
